// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Chart/Pie Chart Default 1`] = `
Array [
  <div
    className="muncher-pie-chart"
  >
    <svg
      className="svg-pie-chart"
    />
    <svg
      className="svg-pie-chart-legend"
    />
  </div>,
  <button
    onClick={[Function]}
  >
    Change Data
  </button>,
  <p>
    Selected: 
    First
  </p>,
]
`;

exports[`Storyshots Chart/Stacked Bar Chart Comparison 1`] = `
Array [
  <div
    className="muncher-bar-chart"
  >
    <svg
      className="svg-bar-chart"
    />
    <svg
      className="svg-bar-chart-legend"
    />
  </div>,
  <button
    onClick={[Function]}
  >
    To Data
  </button>,
  "    ",
  <button
    onClick={[Function]}
  >
    Without Legend
  </button>,
]
`;

exports[`Storyshots Chart/Stacked Bar Chart Default 1`] = `
Array [
  <div
    className="muncher-bar-chart"
  >
    <svg
      className="svg-bar-chart"
    />
    <svg
      className="svg-bar-chart-legend"
    />
  </div>,
  <button
    onClick={[Function]}
  >
    To Data
  </button>,
  "    ",
  <button
    onClick={[Function]}
  >
    Change Data
  </button>,
  "    ",
  <button
    onClick={[Function]}
  >
    Without Legend
  </button>,
]
`;
